Streamline biom import section

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -276,6 +276,12 @@ data("GlobalPatterns", package="mia")
 GlobalPatterns
 ```
 
+#### Tengeler2020 {#tengeler-desc}
+
+Tengeler2020 is derived from a randomised blinded study on the effects of gut
+microbiome on attention-deficit/hyperactivity disorder (ADHD) in humanised mice
+[@tengeler2020gut]. The dataset is briefly presented in
+[these slides](https://microbiome.github.io/outreach/tengeler2020_presentation.html).
 
 #### HintikkaXOData {#hintikka-desc}
 
@@ -616,17 +622,12 @@ Specific import functions are provided for:
 This example shows how [Biom files](https://biom-format.org/) are imported into
 a `TreeSummarizedExperiment` object.
 
-The data is from following publication: 
-Tengeler AC _et al._ (2020) [**Gut microbiota from persons with
-attention-deficit/hyperactivity disorder affects the brain in
-mice**](https://doi.org/10.1186/s40168-020-00816-x). 
-
-The dataset consists of 3 files:
+The dataset consists of 3 files, which can be fetched or downloaded from
+[this repository](https://github.com/microbiome/data/tree/main/Tengeler2020):
 
 -   biom file: abundance table and taxonomy information
 -   csv file: sample metadata
 -   tree file: phylogenetic tree
-
 
 Store the data in your desired local directory (for instance, _data/_ under the
 working directory), and define source file paths
@@ -637,16 +638,21 @@ sample_meta_file_path <- "data/Mapping_file_ADHD_aggregated.csv"
 tree_file_path <- "data/Data_humanization_phylo_aggregation.tre"
 ```  
 
-Now we can load the biom data into a SummarizedExperiment (SE) object.
+Now we can read in the biom file and convert it into a TreeSE object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rankFromPrefix` and `removeTaxaPrefixes` optional arguments.
 
 ```{r}
 library(mia)
 
-# Imports the data
-se <- loadFromBiom(biom_file_path)
+# Read in biom file
+biom_obj <- biomformat::read_biom(biom_file_path)
+
+# Convert biom to TreeSE
+tse <- makeTreeSEFromBiom(biom_obj,
+                          rankFromPrefix = TRUE,
+                          removeTaxaPrefixes = TRUE)
 
 # Check
-se
+tse
 ```  
 
 The `assays` slot includes a list of abundance tables. The imported
@@ -654,7 +660,7 @@ abundance table is named as "counts".  Let us inspect only the first
 cols and rows.
 
 ```{r}
-assays(se)$counts[1:3, 1:3]
+assays(tse)$counts[1:3, 1:3]
 ```
 
 The `rowdata` includes taxonomic information from the biom file. The `head()` command
@@ -663,95 +669,56 @@ shows just the beginning of the data table for an overview.
 `knitr::kable()` is for printing the information more nicely.
 
 ```{r}
-head(rowData(se))
+head(rowData(t6se))
 ```
 
-These taxonomic rank names (column names) are not real rank
-names. Let’s replace them with real rank names.
-
-In addition to that, the taxa names include, e.g., '"k__' before the name, so let's
-make them cleaner by removing them. 
+We further polish the feature names by removing unnecessary characters and then replace the original rowData with its updated version.
 
 ```{r}
-names(rowData(se)) <- c("Kingdom", "Phylum", "Class", "Order", 
-                        "Family", "Genus")
-
-# Goes through the whole DataFrame. Removes '.*[kpcofg]__' from strings, where [kpcofg] 
-# is any character from listed ones, and .* any character.
-rowdata_modified <- BiocParallel::bplapply(rowData(se), 
-                                           FUN = stringr::str_remove, 
-                                           pattern = '.*[kpcofg]__')
-
 # Genus level has additional '\"', so let's delete that also
-rowdata_modified <- BiocParallel::bplapply(rowdata_modified, 
+rowdata_modified <- BiocParallel::bplapply(rowData(tse), 
                                            FUN = stringr::str_remove, 
                                            pattern = '\"')
 
-# rowdata_modified is a list, so it is converted back to DataFrame format. 
-rowdata_modified <- DataFrame(rowdata_modified)
-
-# And then assigned back to the SE object
-rowData(se) <- rowdata_modified
+# rowdata_modified is a list, so convert this back to DataFrame format. 
+# and assign the cleaned data back to the TSE rowData
+rowData(tse) <- DataFrame(rowdata_modified)
 
 # Now we have a nicer table
-head(rowData(se))
+head(rowData(tse))
 ```
 
-We notice that the imported biom file did not contain the sample meta data
-yet, so it includes an empty data frame.
+We notice that the imported biom file did not contain any colData yet,
+so only an empty dataframe appears in this slot.
 
 ```{r}
-head(colData(se))
+head(colData(tse))
 ```
 
-Let us add a sample metadata file.
+Let us add colData from the sample metadata, which is stored in a CSV file.
 
 ```{r}
-# We use this to check what type of data it is
-# read.table(sample_meta_file_path)
-
-# It seems like a comma separated file and it does not include headers
-# Let us read it and then convert from data.frame to DataFrame
-# (required for our purposes)
-sample_meta <- DataFrame(read.table(sample_meta_file_path, sep = ",", header = FALSE))
-
-# Add sample names to rownames
-rownames(sample_meta) <- sample_meta[,1]
-
-# Delete column that included sample names
-sample_meta[,1] <- NULL
+# CSV file without headers and rownames in the first column
+sample_meta <- read.table(sample_meta_file_path,
+                          sep = ",", header = FALSE, row.names = 1)
 
 # We can add headers
 colnames(sample_meta) <- c("patient_status", "cohort", "patient_status_vs_cohort", "sample_name")
 
-# Then it can be added to colData
-colData(se) <- sample_meta
+# Add this sample data to colData of the taxonomic data object
+# Note that the data must be given in a DataFrame format (required for our purposes)
+colData(tse) <- DataFrame(sample_meta)
 ```
 
-Now `colData` includes the sample metadata.
+Now the colData includes the sample metadata.
 
 ```{r}
-head(colData(se))
+head(colData(tse))
 ```
 
-Now, let's add a phylogenetic tree.
+Next, we add a phylogenetic tree to the rowData slot. Such feature is available only in TreeSE objects. Similarly, Trees specifying the sample hierarchy can be stored in the colTree slot.
 
-The current data object, se, is a SummarizedExperiment object. This
-does not include a slot for adding a phylogenetic tree. In order to do
-this, we can convert the SE object to an extended TreeSummarizedExperiment
-object which includes also a `rowTree` slot.
-
-TreeSummarizedExperiment contains also other additional slots and features which
-is why we recommend to use `TreeSE`.
-
-```{r}
-tse <- as(se, "TreeSummarizedExperiment")
-
-# tse includes same data as se
-tse
-```
-
-Next, let us read the tree data file and add it to the R data object (tse).
+Here, we read in the file containing the phylogenetic tree and insert it in corresponding slot of the TreeSE object.
 
 ```{r}
 # Reads the tree file
@@ -766,8 +733,16 @@ tse
 
 Now `rowTree` includes a phylogenetic tree:
 
-```{r, eval=FALSE}
+```{r, eval = FALSE}
 head(rowTree(tse))
+```
+
+Finally, we save the complete TreeSE object as an RDS file, so that we can
+readily import and use it in the future.
+
+```{r, eval = FALSE}
+# SAVE as RDS file
+saveRDS(tse, file = "tse.rds")
 ```
 
 
