--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -171,15 +171,14 @@ in chapter \@ref(example-data).
 Here we cover how to construct a TreeSE from CSV files, using the components
 of OKeefeDSData from the microbiomeDataSets package as an example dataset.
 
-1. Download the files with the prefix _DS_ from
-   [this directory](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl/tree/main/src/assets).
+1. Fetch or download the files in [this directory](https://github.com/microbiome/data/tree/main/OKeefeDSData).
 2. Read in the csv files with `read.csv` and store them into the variables
    `assays`, `rowdata` and `coldata`, respectively.
-3. Create a TreeSE from the individual components with `TreeSummarizedExperiment`.
-   Note that the function requires three arguments: assays, rowData and colData,
-   to which you can give the appropriate item.
-4. Check that importing is done correctly. E.g., choose random samples and features,
-and check that their values equal between raw files and TreeSE.
+3. Create a TreeSE from the individual components with
+   `TreeSummarizedExperiment`. Note that the function requires three arguments:
+   assays, rowData and colData, to which you can give the appropriate item.
+4. Check that importing is done correctly. E.g., choose random samples and
+   features, and check that their values equal between raw files and TreeSE.
 
 Usefuls functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, SimpleList
 
@@ -714,8 +713,9 @@ shows a possible approach.
 ### MAE reconstruction
 
 Next, we will try to reconstruct the same MAE from the files you created.
-Make sure you know their names and location! Alternatively, you can download
-[this directory](https://github.com/microbiome/course_2023_oulu/tree/main/data)
+Make sure you know their names and location! Alternatively, you can fetch or
+download the CSV files in
+[this directory](https://github.com/microbiome/data/tree/main/HintikkaXOData)
 with the readily disassembled components of HintikkaXOData.
 
 1. Read in the csv files containing assays with `read.csv` and save each
