update to contributors

--- a/80_training.Rmd
+++ b/80_training.Rmd
@@ -51,7 +51,7 @@ We encourage to familiarize with the material and test examples in advance:
  
  * [Other outreach material](https://github.com/microbiome/outreach)
 
- * [Orchestrating Microbiome Analysis with R/Bioconductor (OMA)](https://microbiome.github.io/OMA/) (this book)
+ * [Orchestrating Microbiome Analysis with Bioconductor (OMA)](https://microbiome.github.io/OMA/) (this book)
 
  * [Exercises](#exercises) for self-study
 
