--- a/90_acknowledgments.Rmd
+++ b/90_acknowledgments.Rmd
@@ -1,38 +1,56 @@
-# Authors and contributors {-}
+# Developers {-}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
 ```
 
+### Core team {-}
 
-### *Leo Lahti, DSc* {-}
+Contributions to this Gitbook from the various developers are
+coordinated by:
 
-Leo Lahti is professor in Data Science at the [Department of Computing, University of Turku, Finland](https://datascience.utu.fi/), with a focus on computational microbiome analysis. Lahti obtained doctoral degree (DSc) from Aalto University in Finland (2010), developing probabilistic machine learning and data integration methods for high-throughput life science data. Since 2011 he has carried out microbiome research and developed, among other things, the _phyloseq_-based [microbiome R package](https://bioconductor.org/packages/release/bioc/html/microbiome.html) before starting to develop the mia libraries and _TreeSummarizedExperiment_ / _MultiAssayExperiment_ framework for microbiome data science introduced in this gitbook. In addition to carrying out computational microbiome research, Lahti is in the editorial board of _ISME_ and _Microbiome_ journals, work group leader in the European COST action network [ML4microbiome](https://ml4microbiome.eu/), national delegate in the International Science Council Committee on Data ([CODATA](https://codata.org/)), and has led the development of [national policy on open access to research methods in Finland](https://avointiede.fi/en/policies-materials/policies-open-science-and-research-finland/policy-open-research-data-and-methods). He is current member in the [Bioconductor Community Advisory Board](https://bioconductor.org/about/community-advisory-board/) and runs regular training workshops in microbiome data science.
+- *Leo Lahti, DSc*, professor in Data Science at the [Department of
+   Computing, University of Turku,
+   Finland](https://datascience.utu.fi/), with a focus on
+   computational microbiome analysis. Lahti obtained doctoral degree
+   (DSc) from Aalto University in Finland (2010), developing
+   probabilistic machine learning with applications to high-throughput
+   life science data integration. Since then he has focused on
+   microbiome research and developed, for instance, the
+   _phyloseq_-based [microbiome R
+   package](https://bioconductor.org/packages/release/bioc/html/microbiome.html)
+   before starting to develop the _TreeSummarizedExperiment_ /
+   _MultiAssayExperiment_ framework and the mia family of Bioconductor
+   packages for microbiome data science introduced in this
+   gitbook. Lahti led the development of [national policy on open
+   access to research methods in
+   Finland](https://avointiede.fi/en/policies-materials/policies-open-science-and-research-finland/policy-open-research-data-and-methods).
+   He is current member in the [Bioconductor Community Advisory
+   Board](https://bioconductor.org/about/community-advisory-board/)
+   and runs regular training workshops in microbiome data science.
 
-
-### *Tuomas Borman* {-}
-
-Tuomas Borman is a PhD researcher at the Department of Computing, University of Turku, and one of the key developers of the microbiome data science framework presented in this gitbook. He has helped to set up the base ecosystem of R/Bioconductor packages and other online resources.
-
-
-### *Giulio Benedetti* {-}
-
-Giulio Benedetti is a scientific programmer at the Department of Computing, University of Turku. His research interest is mostly related to Data Science. He has also helped to expand the SummarizedExperiment-based microbiome analysis framework to the Julia language, implementing [MicrobiomeAnalysis.jl](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl).
-
-
-### *Felix Ernst, PhD* {-}
-
-Felix Ernst is among the first developers of R/Bioc methods for microbiome research based on the _SummarizedExperiment_ class and its derivatives.
-
+- *Tuomas Borman*, PhD researcher and the lead developer of OMA/mia at
+   the Department of Computing, University of Turku. 
 
 
 ### Contributors {-}
 
-This work is a remarkably collaborative effort over the years. The
-full list of contributors is available via
+This work is a remarkably collaborative effort. The full list of
+contributors is available via
 [Github](https://github.com/microbiome/OMA/graphs/contributors). Some
-of the key contributors include:
+key authors/contributors include:
+
+- *Felix Ernst, PhD*, among the first developers of R/Bioc methods for
+   microbiome research based on the _SummarizedExperiment_ class and
+   its derivatives.
+
+- *Giulio Benedetti*, scientific programmer at the Department of
+   Computing, University of Turku. His research interest is mostly
+   related to Data Science. He has also helped to expand the
+   SummarizedExperiment-based microbiome analysis framework to the
+   Julia language, implementing
+   [MicrobiomeAnalysis.jl](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl).
 
 - *Sudarshan Shetty, PhD* has supported the establishment of the
    framework and associated tools. He also maintains a list of
