--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -251,8 +251,9 @@ got stuck, you can refer to chapter \@ref(assay-slot) of this book.
 6. **Extra**: Create a taxonomy tree based on the taxonomy mappings with
    `addTaxonomyTree` and display its content with `taxonomyTree` and `ggtree`.
 
-If you got stuck, you can look up chapters \@ref(pick-specific) and \@ref(fly-tree)
-on how to pick specific abundances and generate row trees, respectively.
+If you got stuck, you can look up chapters \@fref{datamanipulation}
+and \@ref(fly-tree) on how to pick specific abundances and generate
+row trees, respectively.
 
 
 ### Other elements
