--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Orchestrating Microbiome Analysis"
+title: "Orchestrating Microbiome Analysis with Bioconductor"
 documentclass: book
 site: bookdown::bookdown_site
 bibliography: [book.bib]
@@ -29,18 +29,18 @@ url: "`r .gh_url`"
 
 
 You are reading the online book, [**Orchestrating Microbiome Analysis
-with R and Bioconductor**](microbiome.github.io/OMA) [@OMA], where we
+with Bioconductor**](microbiome.github.io/OMA) [@OMA], where we
 walk through common strategies and workflows in microbiome data
 science.
 
-The book shows through concrete examples how you can take advantage of
-the latest developments in R/Bioconductor for the manipulation,
-analysis, and reproducible reporting of hierarchical and heterogeneous
-microbiome profiling data sets. The book was borne out of necessity,
-while updating microbiome analysis tools to work with Bioconductor
-classes that provide support for multi-modal data collections. Many of
-these techniques are generic and widely applicable in other contexts
-as well.
+The book uses concrete examples to demonstrate how you can take
+advantage of the latest developments in R/Bioconductor for the
+manipulation, analysis, and reproducible reporting of hierarchical,
+heterogeneous, and multi-assay microbiome profiling data sets. The
+book was borne out of necessity, while updating microbiome analysis
+tools to work with Bioconductor classes that provide support for
+multi-modal data collections. Many of these techniques are generic and
+widely applicable in other contexts as well.
 
 This work has been heavily influenced by other similar resources, in
 particular the Orchestrating Single-Cell Analysis with Bioconductor
