--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Orchestrating Microbiome Analysis"
+title: "Orchestrating Microbiome Analysis with Bioconductor"
 documentclass: book
 site: bookdown::bookdown_site
 bibliography: [book.bib]
@@ -19,16 +19,10 @@ url: "`r .gh_url`"
 ---
 
 
-
-
-
 # Welcome {-}
 
-
-
-
 You are reading the online book, [**Orchestrating Microbiome Analysis
-with R and Bioconductor**](https://microbiome.github.io/OMA/) [@OMA], where we
+with Bioconductor**](https://microbiome.github.io/OMA/) [@OMA], where we
 walk through common strategies and workflows in microbiome data
 science.
 
