--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -199,6 +199,7 @@ Here is an example that does a CLR transformation followed by the hierarchical
 clustering algorithm. 
 
 First, we import the library `bluster` that simplifies the clustering.
+
 ```{r bluster_dependence}
 library(bluster)
 ```
@@ -218,10 +219,11 @@ tse <- transformAssay(tse, assay.type = "clr", method = "z",
                       MARGIN = "features")
 
 # Cluster (with euclidean distance) on the features of the z assay
-tse <- cluster(tse, assay.type = "z",
-               clust.col = "hclustEuclidean", MARGIN = "features",
-               HclustParam(dist.fun = stats::dist, metric = "euclidean",
-                           method = "ward.D2"))
+tse <- cluster(tse,
+               assay.type = "z",
+               clust.col = "hclustEuclidean",
+	       MARGIN = "features",
+               HclustParam(dist.fun = stats::dist, method = "ward.D2"))
 
 # Declare the Kendall dissimilarity computation function
 kendall_dissimilarity <- function(x) {
@@ -229,10 +231,11 @@ kendall_dissimilarity <- function(x) {
 }
 
 # Cluster (with Kendall dissimilarity) on the features of the z assay
-tse <- cluster(tse, assay.type = "z", MARGIN = "features", 
+tse <- cluster(tse,
+               assay.type = "z",
                clust.col = "hclustKendall",
-               HclustParam(method = "ward.D2", 
-                           dist.fun = kendall_dissimilarity))
+       	       MARGIN = "features", 	       
+               HclustParam(dist.fun = kendall_dissimilarity, method = "ward.D2"))
 ```
 
 Let us store the resulting cluster indices in the `rowData` column specified 
@@ -310,28 +313,5 @@ head(assay(tse, "pa"))
 ```{r}
 # list of abundance tables that assays slot contains
 assays(tse)
-```
-
-## Pick specific {#pick-specific}
-
-Retrieving of specific elements that are required for specific analysis. For
-instance, extracting abundances for a specific taxa in all samples or all taxa 
-in one sample.  
-
-### Abundances of all taxa in specific sample 
-```{r}
-taxa.abund.cc1 <- getAbundanceSample(tse,
-                                     sample_id = "CC1",
-                                     assay.type = "counts")
-taxa.abund.cc1[1:10]
-```
-
-### Abundances of specific taxa in all samples   
-
-```{r}
-taxa.abundances <- getAbundanceFeature(tse,
-                                       feature_id = "Phylum:Bacteroidetes",
-                                       assay.type = "counts")
-taxa.abundances[1:10]
 ```
 
