--- a/book.bib
+++ b/book.bib
@@ -1413,14 +1413,15 @@ https://github.com/thomasp85/patchwork},
   langid = {english}
 }
 
-@article{tengeler2020gut,
+@article{Tengeler2020,
   title={Gut microbiota from persons with attention-deficit/hyperactivity disorder affects the brain in mice},
-  author={Tengeler, Anouk C and Dam, Sarita A and Wiesmann, Maximilian and Naaijen, Jilly and Van Bodegom, Miranda and Belzer, Clara and Dederen, Pieter J and Verweij, Vivienne and Franke, Barbara and Kozicz, Tamas and others},
+  author={Anouk C Tengeler, Sarita A Dam, Maximilian Wiesmann, Jilly Naaijen, Miranda van Bodegom, Clara Belzer, Pieter J Dederen, Vivienne Verweij, Barbara Franke, Tamas Kozicz, Alejandro Arias Vasquez, Amanda J Kiliaan},
   journal={Microbiome},
   volume={8},
   pages={1--14},
   year={2020},
-  publisher={Springer}
+  publisher={Springer},
+  doi = {10.1186/s40168-020-00816-x}
 }
 
 
