--- a/book.bib
+++ b/book.bib
@@ -1415,7 +1415,7 @@ https://github.com/thomasp85/patchwork},
 
 @article{Tengeler2020,
   title={Gut microbiota from persons with attention-deficit/hyperactivity disorder affects the brain in mice},
-  author={Anouk C Tengeler, Sarita A Dam, Maximilian Wiesmann, Jilly Naaijen, Miranda van Bodegom, Clara Belzer, Pieter J Dederen, Vivienne Verweij, Barbara Franke, Tamas Kozicz, Alejandro Arias Vasquez, Amanda J Kiliaan},
+  author={C Tengeler, Anouk and A Dam, Sarita and Wiesmann, Maximilian and Naaijen, Jilly and van Bodegom, Miranda and Belzer, Clara and J Dederen, Pieter and Verweij, Vivienne and Franke, Barbara and Kozicz, Tamas and Arias Vasquez, Alejandro and J Kiliaan, Amanda},
   journal={Microbiome},
   volume={8},
   pages={1--14},
