--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -63,16 +63,16 @@ devtools::install_github("microbiome/mia")
 
 ## Package ecosystem {#ecosystem}
 
-Methods for the analysis and manipulation of
-`(Tree)SummarizedExperiment` and `MultiAssayExperiment` data
-containers are available through a number of R packages. Some of these
-are listed below. If you know more tips on such packages, data
-sources, or other resources, kindly [let us
-know](https://microbiome.github.io) through the issues, pull requests,
-or online channels.
+Methods for `(Tree)SummarizedExperiment` and `MultiAssayExperiment`
+data containers are provided by multiple independent developers
+through R/Bioconductor packages. Some of these are listed below (tips
+on new packages are [welcome](https://microbiome.github.io)).
 
 
-### mia family of methods
+
+### mia package family
+
+The mia package family provides general methods for microbiome data wrangling, analysis and visualization. 
 
 - [mia](https://microbiome.github.io/mia/): Microbiome analysis tools [@R_mia]
 - [miaViz](https://microbiome.github.io/miaViz/): Microbiome analysis specific visualization [@Ernst2022]
@@ -86,6 +86,8 @@ or online channels.
 
 
 ### Differential abundance {#sub-diff-abund}
+
+The following DA methods support `(Tree)SummarizedExperiment`.
 
 - [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
 - [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
