Reorganized pkg listing

--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -11,11 +11,10 @@ chapterPreamble()
 The Bioconductor microbiome data science framework consists of:
 
 - **data containers**, designed to organize multi-assay microbiome data
-- **R packages** that provide dedicated methods for analysing such data
+- **R/Bioconductor packages** that provide dedicated methods 
 - **community** of users and developers 
 
 <img src="general/figures/ecosystem.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
-
 
 This section provides an overview of the package ecosystem. Section
 \@ref(example-data) links to various open microbiome data resources
@@ -69,7 +68,6 @@ through R/Bioconductor packages. Some of these are listed below (tips
 on new packages are [welcome](https://microbiome.github.io)).
 
 
-
 ### mia package family
 
 The mia package family provides general methods for microbiome data wrangling, analysis and visualization. 
@@ -78,11 +76,6 @@ The mia package family provides general methods for microbiome data wrangling, a
 - [miaViz](https://microbiome.github.io/miaViz/): Microbiome analysis specific visualization [@Ernst2022]
 - [miaSim](https://microbiome.github.io/miaSim/): Microbiome data simulations [@Simsek2021]
 - [miaTime](https://microbiome.github.io/miaTime/): Microbiome time series analysis [@Lahti2021]
-
-
-### Tree-based methods {#sub-tree-methods}
-
-- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (@Silverman2017)
 
 
 ### Differential abundance {#sub-diff-abund}
@@ -94,17 +87,22 @@ The following DA methods support `(Tree)SummarizedExperiment`.
 - [ALDEx2](https://www.bioconductor.org/packages/release/bioc/html/ALDEx2.html) for differential abundance analysis
 
 
-### Manipulation {#sub-manipulation}
+### Other packages
 
-- [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for analyzing microbiome and other ecological data within the tidy framework
-
-
-### Further options
-
+- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (@Silverman2017) phylogeny-aware phILR transformation
+- [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for "tidy" analysis of microbiome and other ecological data
 - [Tools for Microbiome
   Analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
   site listed over 130 R packages for microbiome data science in
   2023. Many of these are not in Bioconductor, or do not directly
-  support the data containers used in this book but can be used with
-  minor modifications.
+  support the data containers used in this book but can be often used
+  with minor modifications. The phyloseq-based tools can be used by
+  converting the TreeSE data into phyloseq with
+  `makePhyloseqFromTreeSummarizedExperiment`.
+
+
+### Open microbiome data 
+
+Hundreds of published microbiome data sets are readily available in
+these data containers (see \@ref(example-data)).
 
