--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -11,11 +11,10 @@ chapterPreamble()
 The Bioconductor microbiome data science framework consists of:
 
 - **data containers**, designed to organize multi-assay microbiome data
-- **R packages** that provide dedicated methods for analysing such data
+- **R/Bioconductor packages** that provide dedicated methods 
 - **community** of users and developers 
 
 <img src="general/figures/ecosystem.png" width="100" alt="mia logo" align="right" style="margin: 0 1em 0 1em" />
-
 
 This section provides an overview of the package ecosystem. Section
 \@ref(example-data) links to various open microbiome data resources
@@ -63,16 +62,15 @@ devtools::install_github("microbiome/mia")
 
 ## Package ecosystem {#ecosystem}
 
-Methods for the analysis and manipulation of
-`(Tree)SummarizedExperiment` and `MultiAssayExperiment` data
-containers are available through a number of R packages. Some of these
-are listed below. If you know more tips on such packages, data
-sources, or other resources, kindly [let us
-know](https://microbiome.github.io) through the issues, pull requests,
-or online channels.
+Methods for `(Tree)SummarizedExperiment` and `MultiAssayExperiment`
+data containers are provided by multiple independent developers
+through R/Bioconductor packages. Some of these are listed below (tips
+on new packages are [welcome](https://microbiome.github.io)).
 
 
-### mia family of methods
+### mia package family
+
+The mia package family provides general methods for microbiome data wrangling, analysis and visualization. 
 
 - [mia](https://microbiome.github.io/mia/): Microbiome analysis tools [@R_mia]
 - [miaViz](https://microbiome.github.io/miaViz/): Microbiome analysis specific visualization [@Ernst2022]
@@ -80,33 +78,31 @@ or online channels.
 - [miaTime](https://microbiome.github.io/miaTime/): Microbiome time series analysis [@Lahti2021]
 
 
-### Tree-based methods {#sub-tree-methods}
-
-- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (@Silverman2017)
-
-
 ### Differential abundance {#sub-diff-abund}
+
+The following DA methods support `(Tree)SummarizedExperiment`.
 
 - [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
 - [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
-- [LinDA](https://cran.r-project.org/web/packages/MicrobiomeStat/) for differential abundance analysis
-- [ZicoSeq](https://cran.r-project.org/web/packages/GUniFrac/) for differential abundance analysis
 - [ALDEx2](https://www.bioconductor.org/packages/release/bioc/html/ALDEx2.html) for differential abundance analysis
-- [phyloseq](https://www.bioconductor.org/packages/release/bioc/html/phyloseq.html) for data preparation into phyloseq format for differential abundance analysis, such as ANCOMBC requires the input data is phyloseq format
 
 
+### Other packages
 
-### Manipulation {#sub-manipulation}
-
-- [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for analyzing microbiome and other ecological data within the tidy framework
-
-
-### Further options
-
+- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (@Silverman2017) phylogeny-aware phILR transformation
+- [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for "tidy" analysis of microbiome and other ecological data
 - [Tools for Microbiome
   Analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
   site listed over 130 R packages for microbiome data science in
   2023. Many of these are not in Bioconductor, or do not directly
-  support the data containers used in this book but can be used with
-  minor modifications.
+  support the data containers used in this book but can be often used
+  with minor modifications. The phyloseq-based tools can be used by
+  converting the TreeSE data into phyloseq with
+  `makePhyloseqFromTreeSummarizedExperiment`.
+
+
+### Open microbiome data 
+
+Hundreds of published microbiome data sets are readily available in
+these data containers (see \@ref(example-data)).
 
